targets/srv0/k3s/nextcloud/nextcloud.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud
  namespace: apps
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      securityContext:
        fsGroup: 33
      containers:
        - name: nextcloud
          image: nextcloud:34.0.0
          securityContext:
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 80
          readinessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            initialDelaySeconds: 15
          volumeMounts:
            - name: nextcloud-data
              mountPath: /var/www/html
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 128Mi
      volumes:
        - name: nextcloud-data
          persistentVolumeClaim:
            claimName: nextcloud-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud
  namespace: apps
spec:
  type: ClusterIP
  selector:
    app: nextcloud
  ports:
    - port: 80
      targetPort: 80
