targets/srv0/k3s/nextcloud/prereqs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextcloud-postgresql
  namespace: apps
  labels:
    app: nextcloud-postgresql
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: nextcloud-postgresql
  template:
    metadata:
      labels:
        app: nextcloud-postgresql
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: postgresql
          image: postgres:17.10-alpine # PRESERVE_MAJOR
          securityContext:
            runAsUser: 999
            runAsGroup: 999
            allowPrivilegeEscalation: false
          ports:
            - containerPort: 5432
          readinessProbe:
            exec:
              command:
                - pg_isready
                - -U
                - nextcloud
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 3
            initialDelaySeconds: 15
          volumeMounts:
            - name: data
              mountPath: /var/lib/postgresql/data
          resources:
            limits:
              memory: 2Gi
            requests:
              memory: 128Mi
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: nextcloud-db-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: nextcloud-postgresql
  namespace: apps
spec:
  selector:
    app: nextcloud-postgresql
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
