targets/srv0/k3s/nextcloud/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-ingress
  namespace: apps
spec:
  entryPoints:
    - websecure
    - websecure-proxy
  routes:
    - match: Host(`nextcloud.$SERVICES_DOMAIN`) && PathPrefix(`/heartbeat`)
      kind: Rule
      middlewares:
        - name: nextcloud-hsts
          namespace: apps
      services:
        - name: nextcloud
          port: 80
    - match: Host(`nextcloud.$SERVICES_DOMAIN`)
      kind: Rule
      middlewares:
        - name: nextcloud-hsts
          namespace: apps
        - name: geoblock
          namespace: base
        - name: crowdsec-bouncer
          namespace: base
        - name: forwardauth-authelia
          namespace: base
      services:
        - name: nextcloud
          port: 80
  tls:
    secretName: nextcloud-prod-tls
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-hsts
  namespace: apps
spec:
  headers:
    stsSeconds: 15552000
